# solidb

./: .dockerignore  .env  .gitignore  AI_AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LOCK_FREE_MIGRATION_REPORT.md  README.md  TEST_COVERAGE.md  bench_all.sh  cookies.txt  demo.json  docker-compose-cluster.yml  docker-compose.yml  dump.jsonl  implemented_functions.txt  install.sh  release-please-config.json  release.toml  test_cluster.sh  tested_functions.txt  update_tests.sh
.agent/tasks/: timeseries_implementation_plan.md
.cargo/: config.toml
.claude/: settings.local.json-old
.gemini/: GEMINI.md
.github/workflows/: CLAUDE.md  ci.yml  publish-on-merge.yml  release.yml
benches/: Cargo.toml  benchmark.rs  document_cache.rs  http_client.rs
benchmarks/: Cargo.toml
clients/: run_benchmarks.sh
clients/PHP-client/: benchmark.php  benchmark_parallel.php  composer.json  example.php  run_tests.sh
clients/PYTHON-client/: benchmark.py  benchmark_parallel.py  requirements.txt  run_tests.sh  setup.py
clients/Ruby-client/: .rspec_status  Gemfile  benchmark.rb  benchmark_parallel.rb  run_tests.sh  solidb.gemspec
clients/android-example/: MainActivity.kt  build.gradle.kts
clients/elixir_client/: benchmark.exs  mix.exs
clients/flutter-example/: main.dart
clients/go-client/: benchmark.go  benchmark.go-e  benchmark_bin  benchmark_parallel.go  go.mod  run_tests.sh
clients/ios-example/: ContentView.swift
clients/js-client/: benchmark.ts  benchmark_parallel.ts  package-lock.json  package.json  run_tests.sh  tsconfig.json
clients/mobile-sdk/: README.md
clients/react-native-example/: App.tsx
clients/rust-client/: Cargo.toml  README.md  benchmark.rs  build.rs  uniffi.toml
clients/rust-client/src/: lib.rs  mobile_ffi.rs  solidb_client.udl
clients/rust-client/src/client/: builder.rs  bulk.rs  collection.rs  database.rs  document.rs  http_client.rs  index.rs  mod.rs  query.rs  transaction.rs
clients/rust-client/src/protocol/: error.rs  response.rs  types.rs
clients/rust-client/src/sync/: local_data_source.rs  manager.rs  mod.rs  store.rs
docs/: BACKUP.md  CLIENTS.md  FUSE.md  LUA_WEBSOCKET.md  SCHEMA_VALIDATION.md  SDBQL_REFERENCE.md  SHARDING.md  TRANSACTIONS.md  lua_enhancements_progress.md
examples/: basic_usage.rs  check_type.rs
examples/lua_scripts/: ai_agent_demo.lua  chat_room.lua  enhanced_methods_demo.lua  presence_demo.lua  pubsub_demo.lua
k8s/: README.md  configmap.yaml  namespace.yaml  secret.yaml
k8s/cluster/: headless-service.yaml  pdb.yaml  service.yaml  statefulset.yaml
k8s/single/: deployment.yaml  pvc.yaml  service.yaml
scripts/: diagnose_sharding.sh  release.sh  reproduce_incremental_sync.sh  reproduce_incremental_sync_3node.sh  reproduce_mixed_workload.sh  reproduce_resharding_3to4.sh  reproduce_slowness.sh  start_cluster.sh  test_cluster_full.sh  test_import_distribution.sh  test_resharding_accuracy.sh  test_resharding_deadlock_fix.sh  test_resharding_performance.sh  test_shard_config.sh  verify_3_node_replication.sh  verify_bulk_perf.sh  verify_bulk_sync.sh  verify_cleanup.sh  verify_cluster_basic.sh  verify_cluster_replication.sh  verify_disk_usage.sh  verify_failover.sh  verify_multi_node_sync.sh  verify_rebalance.sh  verify_replicated_shards.sh  verify_sharding_fix.sh  verify_system_scripts_sync.sh
sdbql-core/: Cargo.toml
sdbql-core/src/: ast.rs  error.rs  lexer.rs  lib.rs
sdbql-core/src/executor/: helpers.rs  local.rs  mod.rs
sdbql-core/src/executor/builtins/: array.rs  datetime.rs  json_funcs.rs  math.rs  mod.rs  string.rs  type_check.rs
sdbql-core/src/parser/: clauses.rs  mod.rs  tests.rs
sdbql-core/src/parser/expressions/: mod.rs  operators.rs  precedence.rs  primary.rs  special.rs
src/: daemon.rs  error.rs  lib.rs  main.rs
src/ai/: CLAUDE.md  agent.rs  contribution.rs  feedback.rs  learning.rs  marketplace.rs  mod.rs  orchestrator.rs  task.rs  validation.rs
src/aql/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs
src/cli/: mod.rs
src/cluster/: CLAUDE.md  config.rs  health.rs  hlc.rs  manager.rs  mod.rs  node.rs  replication.rs  service.rs  state.rs  stats.rs  transport.rs  websocket_client.rs
src/driver/: CLAUDE.md  client.rs  handler.rs  mod.rs  protocol.rs
src/queue/: cron.rs  jobs.rs  mod.rs  types.rs
src/replication/: log.rs  mod.rs  protocol.rs  worker.rs
src/scripting/: CLAUDE.md  ai_bindings.rs  auth.rs  channel_manager.rs  conversion.rs  dev_tools.rs  error_handling.rs  file_handling.rs  http_helpers.rs  jwt.rs  mod.rs  string_utils.rs  types.rs  validation.rs
src/sdbql/: CLAUDE.md  ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  repro_any.rs
src/server/: CLAUDE.md  ai_handlers.rs  auth.rs  authorization.rs  blob_handlers.rs  handlers.rs  (+20 more)
test_queue_temp_data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000015
tests/: aggregation_query_tests.rs  ai_handlers_tests.rs  api_tests.rs  api_tests.rs.bak  api_validation_tests.rs  aql_tests.rs  aql_tests.rs.bak  auth_tests.rs  benchmark_sort.rs  benchmark_websocket.rs  bind_modification_tests.rs  blob_distribution_tests.rs  blob_storage_tests.rs  bloom_filter_tests.rs  changefeed_cluster_test.rs  cluster_tests.rs  codec_database_tests.rs  collection_coverage_tests.rs  collection_properties_test.rs  columnar_index_tests.rs  columnar_tests.rs  cuckoo_filter_tests.rs  cursor_pagination_tests.rs  debug_presence_update.rs  document_edge_case_tests.rs  document_operations_tests.rs  driver_client_tests.rs  driver_protocol_tests.rs  dump_restore_tests.rs  error_handling_tests.rs  explain_analyze_tests.rs  explain_columnar_test.rs  graph_tests.rs  graph_traversal_tests.rs  handlers_tests.rs  http_api_test.rs  hybrid_search_tests.rs  index_tests.rs  insert_tests.rs  lua_collection_helpers_tests.rs  (+114 more)
verify_data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000011  OPTIONS-000013
vscode-solidb/: package-lock.json  package.json
www/: .gitignore  .init.lua  CLAUDE.md  LUAONBEANS.md  README.md  model_debug.txt  package-lock.json  package.json  restart.sh
www_old/: CHANGELOG.md  README.md  beans.lua  deploy.sh  package-lock.json
(+1223 files in other folders)
