[package]
name = "solidb"
version = "0.1.0"
edition = "2021"
default-run = "solidb"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.8.7", features = ["multipart", "ws"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
async-stream = "0.3"

# WebSocket Client (for global changefeed aggregation)
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.4"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid7 = "1.0"
regex = "1.10"

# Storage
rocksdb = "0.24"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.3"
once_cell = "1.19"
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

# Temp directories (needed by benchmark)
tempfile = "3.10"

# HTTP client (for benchmarks)
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }

# FUSE filesystem (requires macFUSE on macOS)
fuser = { version = "0.14", optional = true }

# Daemon mode (Unix only)
daemonize = "0.5"
libc = "0.2"

# Parallel processing (for concurrent benchmarks)
rayon = "1.8"
csv = "1.4.0"

# CLI UX
indicatif = "0.18"
colored = "3.0"

# System info for stats
sysinfo = "0.30"
futures = { version = "0.3.31", features = ["std"] }

# Embedded Lua scripting
mlua = { version = "0.11.5", features = ["lua54", "vendored", "async", "serialize", "send"] }

# Default binary
[[bin]]
name = "solidb"
path = "src/main.rs"

[[bin]]
name = "solidb-dump"
path = "src/bin/solidb-dump.rs"

[[bin]]
name = "solidb-restore"
path = "src/bin/solidb-restore.rs"

[dev-dependencies]
tokio-test = "0.4"

[features]
fuse = ["dep:fuser"]

[[bin]]
name = "solidb-fuse"
path = "src/bin/solidb-fuse.rs"
required-features = ["fuse"]
