[workspace]
members = ["clients/rust-client", "sdbql-core"]

[package]
name = "solidb"
version = "0.6.0"
edition = "2021"
default-run = "solidb"
description = "A lightweight, high-performance structured database server written in Rust."
license-file = "LICENCE.md"
repository = "https://github.com/solisoft/solidb"
keywords = ["database", "nosql", "json", "rest-api", "rust"]
categories = ["database", "web-programming::http-server"]
include = ["src/**/*", "README.md", "LICENCE.md", "Cargo.toml", "docs/**/*"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.8.7", features = ["multipart", "ws", "macros"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-gzip", "compression-zstd"] }
async-stream = "0.3"
async-trait = "0.1"

# WebSocket Client (for global changefeed aggregation)

tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.4"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
lz4_flex = "0.11"
base64 = "0.22"
base32 = "0.4"
jsonschema = "0.38"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid7 = "1.0"
ulid = "1.1"
nanoid = "0.4"
regex = "1.10"
seahash = "4.1"  # Uniform hash distribution for sharding

# Storage
rocksdb = "0.24"
cron = "0.12"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.3"
once_cell = "1.19"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
md5 = "0.7"

# Temp directories (needed by benchmark)
tempfile = "3.10"

# HTTP client (for benchmarks)
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }

# FUSE filesystem (requires macFUSE on macOS)
fuser = { version = "0.16", optional = true }

# Daemon mode (Unix only)
# daemonize crate removed - using custom implementation in src/daemon.rs
# daemonize = "0.5"
libc = "0.2"

# Parallel processing (for concurrent benchmarks)
rayon = "1.8"
csv = "1.4.0"

# CLI UX
indicatif = "0.18"
colored = "3.0"
rustyline = "15.0"

# System info for stats
sysinfo = "0.30"

# Prometheus metrics
prometheus = "0.14"
futures = { version = "0.3.31", features = ["std"] }

# Embedded Lua scripting
mlua = { version = "0.11.5", features = ["lua54", "vendored", "async", "serialize", "send"] }
rmp-serde = "1.3.1"

# Native driver client (for benchmark binaries)
solidb-client = { path = "clients/rust-client" }

# Enhanced validation and sanitization
sanitizer = "0.1"
slug = "0.1"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# Cookie handling
cookie = "0.18"
time = "0.3"

# Caching
lru = "0.16"
fastbloom = { version = "0.14.0", features = ["serde"] }
cuckoofilter = { version = "0.5", features = ["serde_support"] }
parking_lot = "0.12"
dashmap = "6"

# CLI Script Development
notify = "6"           # File system watcher
toml = "0.8"           # Config file parsing
walkdir = "2"          # Directory traversal
similar = "2"          # Diff generation
rpassword = "7"        # Secure password input

# TUI
ratatui = "0.29"       # TUI framework
crossterm = "0.28"     # Cross-platform terminal backend
tui-textarea = { version = "0.7", features = ["search"] }   # Multi-line text editor widget

# Default binary
[[bin]]
name = "solidb"
path = "src/main.rs"

[[bin]]
name = "solidb-dump"
path = "src/bin/solidb-dump.rs"

[[bin]]
name = "solidb-restore"
path = "src/bin/solidb-restore.rs"

[dev-dependencies]
tokio-test = "0.4"

[features]
fuse = ["dep:fuser"]

[[bin]]
name = "solidb-fuse"
path = "src/bin/solidb-fuse.rs"
required-features = ["fuse"]

[[bin]]
name = "solidb-repl"
path = "src/bin/solidb-repl.rs"
