[package]
name = "solidb-benchmarks"
version = "0.9.0"
edition = "2021"
publish = false

[dependencies]
solidb-client = { path = "../clients/rust-client" }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
