[package]
name = "solidb-client"
version = "0.6.0"
edition = "2021"
description = "Official Rust client for SoliDB database"
license = "MIT"
repository = "https://github.com/solisoft/solidb"
keywords = ["database", "client", "solidb", "messagepack"]
categories = ["database", "asynchronous"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
