[package]
name = "solidb-client"
version = "0.8.0"
edition = "2021"
description = "Official Rust client for SoliDB database with HTTP and TCP transport"
license = "MIT"
repository = "https://github.com/solisoft/solidb"
keywords = ["database", "client", "solidb", "messagepack", "http"]
categories = ["database", "asynchronous"]

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
# Offline sync dependencies
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json", "uuid"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
dirs = "5.0"
tracing = "0.1"
# Local query execution
sdbql-core = { path = "../../sdbql-core", version = "0.1.0" }
# UniFFI for mobile bindings (optional)
uniffi = { version = "0.28", features = ["cli", "tokio"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[lib]
name = "solidb_client"
crate-type = ["cdylib", "staticlib", "lib"]

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

[features]
default = []
mobile = ["uniffi"]
